--- a/styles/style.css
+++ b/styles/style.css
@@ -314,6 +314,7 @@ gap: 10px;
     background-color: #F3F3F3;
     border: none;
     border-radius: 10px;
+    padding-left: 10px;
     
 }
 .input-section.text-box{
@@ -349,4 +350,194 @@ gap: 10px;
 }
 .footer-input input{
     height: 30px;
+}
+@media screen and (max-width:576px) {
+  .navbar-container{
+   flex-direction: column;
+   padding-left: 12px;
+  }
+  .primariy-btn{
+   width: 130px;
+   height: 40px;
+}
+  .logo-png{
+    width: 80px;
+    height: 30px;
+  }
+  .banner-container{
+    width: 500px;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 25px auto;
+ background-position:center;
+  display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+  }
+  .banner-heading{
+    color: white;
+    font-size: 10px ;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding-top: 10px;
+}
+.banner-description{
+    color: white;
+    font-size: 10px;
+    margin-top: 10px;
+    text-align: center;
+}
+.search-btn{
+   outline: none;
+    width: 250px;
+    height: 35px;
+    background-color: white;
+    padding-left: 50px;
+    margin-top: 30px;
+    
+
+}
+.btn-2{
+     background-color: rgba(182, 140, 90, 1);
+   border-radius: 8px;
+   padding:10px;
+   padding-left:15px;
+   width: 100px;
+   height: 35px;
+   border: none;
+  margin-top: 5px;
+}
+.description-container{
+    display: flex;
+    flex-direction: column;
+align-items: center;
+justify-content: center;
+text-align: center;
+padding-left: 10px;
+
+}
+.heading-allow{
+   font-size: 35px;
+}
+.paragrp-description{
+    font-size: 12px;
+}
+.card-container{
+   display: grid;
+   align-items: center;
+   justify-content: center;
+   grid-template-columns: repeat(1,1fr);
+   grid-template-rows: repeat(1,1fr);
+  text-align: center;
+  padding-right: 65px;
+   
+}
+.description h4{
+    font-size: 30px;
+    
+}
+.description p{
+    font-size: 12px;
+}
+.lower-container{
+  width: 480px;
+  height: 300px;
+  background-size: contain;
+align-items: center;
+justify-content: center;
+margin-left: 20px;
+}
+.paragrp-container{
+   font-size: 10px;
+   text-align: center;
+   padding-right: 10px;
+}
+.heading{
+    font-size: 15px;
+}
+.main-content h6{
+font-size: 35px;
+}
+.main-content p{
+    font-size: 12px;
+}
+.application-container{
+ flex-direction: column;
+ margin: 25px auto;
+ align-items: center;
+ justify-content: space-around;
+ padding-top: 20px;
+}
+.card-1{
+border-radius: 20px;
+width: 460px;
+height:150px;
+justify-content: center;
+margin-left: 25px;
+}
+/* .heading-container{
+   padding-left: 10px;
+   margin-left: 10px;
+} */
+.card-1 p{
+    padding-top: 5px;
+}
+.card-2{
+   border-radius: 20px;
+width: 460px;
+height:50px;
+justify-content: center;
+margin-left: 20px;
+}
+.card-3{
+ border-radius: 20px;
+width: 460px;
+height:50px;
+justify-content: center;
+margin-left: 20px;
+}
+.card-4{
+border-radius: 20px;
+width: 460px;
+height:50px;
+justify-content: center;
+margin-left: 20px;
+}
+.application-logo img{
+    width: 350px;
+    height: 500px;
+}
+.main-container h5{
+    font-size: 30px;
+}
+.main-container p{
+    font-size: 12px;
+}
+.description-card-container{
+    flex-direction: column;
+}
+.card-section{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    border-radius: 20px;
+}
+.input-section input{ 
+    width: 420px;
+    height: 72px;
+    border-radius: 10px;
+    margin-right: 130px;
+}
+.input-section{
+padding-left: 157px;
+}
+.input-btn{
+    width: 420px;
+}
+.footer-container{
+    flex-direction: column;
+    padding-top: 10px;
+}
 }
